[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "react-guard-patterns"
version = "0.1.0"
description = "Stop-condition patterns for ReAct agents — prevent infinite loops in production"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "llm",
    "agents",
    "react-agent",
    "stop-conditions",
    "ai-safety",
    "production",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []   # zero runtime deps — pure stdlib

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/darshjme/react-guard-patterns"
Repository = "https://github.com/darshjme/react-guard-patterns"
Issues = "https://github.com/darshjme/react-guard-patterns/issues"

[tool.hatch.build.targets.wheel]
packages = ["react_guards"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
